--- a/tsconfig.json
+++ b/tsconfig.json
@@ -31,7 +31,7 @@
     // "baseUrl": "./",                                  /* Specify the base directory to resolve non-relative module names. */
     // "paths": {},                                      /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
-    // "typeRoots": [],                                  /* Specify multiple folders that act like './node_modules/@types'. */
+    "typeRoots": ["./src/types", "./node_modules/@types"],                                /* Specify multiple folders that act like './node_modules/@types'. */
     // "types": [],                                      /* Specify type package names to be included without being referenced in a source file. */
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
@@ -108,12 +108,7 @@
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules",
-    "src/controllers/old/**/*",
-    "src/models/old/**/*",
-    "src/routes/old/**/*",
-    "src/_app_SQL.ts",
-    "src/old_app.ts",
-    "src/util/path.ts"
+
   ]
 
 }
